fix collapse arrow centering

--- a/assets/obsidian-styles.css
+++ b/assets/obsidian-styles.css
@@ -263,6 +263,6 @@
 
 .collapse-icon::before 
 { 
-    content: "-" !important; 
+    content: "" !important; 
     visibility: hidden !important;
 }
